--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,13 +1,7 @@
-*{
-  outline: none;
-  box-sizing: border-box;
-  margin:0;
-  padding: 0;
-  font-family:"Maven Pro",sans-serif;
-}
+@import url(./main.css);
+
 /* form sign up */
 body{
-  width:100%;
   background: linear-gradient(90deg,#7ea1ca,#ebad8a);
 }
 .form{
@@ -15,7 +9,7 @@ body{
   align-items: center;
   border-radius: 10px;
   margin:0px auto;
-  margin-top:20px;
+  margin-top:100px;
   margin-bottom: 20px;
   flex-direction: column;
   max-width: 300px;
@@ -41,6 +35,7 @@ body{
   margin-bottom: 19px;
   width: 100%;
   position: relative;
+  
 }
 .form__group h3{
   font-size: 20px;
@@ -49,12 +44,11 @@ body{
   max-width: 100%;
   margin:0 0 5px 15px;
 }
-.form__group i{
+.form__group .input__box img{
   position:absolute;
-  font-size: 20px;
-  color:white;
-  top:55px;
-  left:10px;
+  width: 20px;
+  top:45px;
+  left:15px;
 }
 .form .form__input input{
   width: 100%;
@@ -62,7 +56,7 @@ body{
   background-color: #dfdedc;
   border-radius: 10px;
   border: 1px solid transparent;
-  padding-left:30px;
+  padding-left:50px;
   font-size: 16px;
 }
 
@@ -89,7 +83,7 @@ input[type="checkbox"]{
   background-color: #d0a791;
   width: 200px;
   height: 60px;
-  font-weight: 800;
+
   font-size: 16px;
   line-height: 16px;
   text-align: center;
