--- a/public/css/info.css
+++ b/public/css/info.css
@@ -6,6 +6,7 @@
 .info{
   max-width: 100%;
   margin: 100px 20px 10px 30px;
+  
 }
 .info__logo{
   width: 100%;
@@ -24,13 +25,20 @@
   color:red
 }
 .info__content p {
-  color:black;
+  color:var(--TextColor);
   line-height: 22px;
   word-spacing: 2px;
   font-size: 16px;
   font-family:var(--FontPrimary),sans-serif;
 }
-
+.bg{
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../assets/img/home/menu/bg.png") top center;
+  background-size: cover;
+  position: relative;
+  margin-bottom: -50px;
+}
 @media (min-width:600px) {
   .split{
     display: flex;
