--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -12,13 +12,13 @@
 .nav .row1 li img { width: 35px; height: 100%;   margin-top: 30px; transform: translate(0px, -11px); }
 .nav .row2 .menu { width: 70%; display: flex; position: absolute; z-index: 9; }
 .nav .row2 {width: 100%;display: flex;height: 50px;background-color: rgb(37, 37, 60);align-items: center;position: relative;z-index: 20;}
-.nav .row2 li { width: 193px; border-right: 1px solid white; line-height: 50px; padding-left: 10px; }
+.nav .row2  li { width: 193px; border-right: 1px solid white; line-height: 50px; /*padding-left: 10px;*/ }
 .nav .row2 li a{ color:white;}
 
 
 .nav .row2 li a span { margin-left: 7px; }
 .nav .row2 li img#logo { width: 100px; margin-top: 0px; margin-left: 25px; }
-.nav .row2 li img { width: 33px; float: left; margin-top: 6px; }
+.nav .row2 li img { width: 33px; float: left; margin-top: 6px; margin-left:10px;}
 .admin { position: absolute; right: 5%; text-align: right; border-right: none !important; }
 .admin > a { padding: 7px 20px; background-color: rgb(246, 183, 78); border-radius: 5px; font-weight: bold; color: black !important; }
 .main-nav { position: fixed; top: 0px; left: 6px; z-index: 10; display: none; }
@@ -147,34 +147,42 @@ body.dark{
 /* end of search button */
 /* submenu */
 .menu2{
-  max-width: 200px;
+  width:193px;
   position:absolute;
   display: none;
   transition:1s ease-in-out;
-  top:60px;
+
   background: rgb(37, 37, 61);
   z-index: -1;
 }
-.admin .menu2{
-  right:0;
+
+/* .menu li:nth-child(3) .menu2{
+  right:401px;
 }
-.admin .menu2:before{
+.menu li:nth-child(4) .menu2{
+  right:208px;
+} */
+
+/* .admin .menu2{
+  right:-20px;
+} */
+/* .admin .menu2:before{
   left:145px;
-}
+} */
 
 
 .row2 li:hover .menu2,.row2 li:focus .menu2,.row2 li:active .menu2{
   display: block;
 }
 
-.menu2:before{
+/* .menu2:before{
   content: '';
   position: absolute;
   width:0px;
   height:0px;
-  /* border-left:10px solid transparent;
+  border-left:10px solid transparent;
   border-right:10px solid transparent;
-  border-bottom: 10px solid black; */
+  border-bottom: 10px solid black;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid #000;
@@ -182,24 +190,27 @@ body.dark{
   opacity: 1;
   top:-5px;
   left:10px;
+} */
 
-}
 .row2 .menu2 li{
   display: block;
   width: 100%;
   border-bottom:1px solid grey;
-  padding-right: 20px;
+  border-right:none;
+  /* padding-right: 20px; */
 }
 .row2 .menu2 li a{
   color:white;
   font-size: 14px;
   line-height: 14px;
-
+  margin-left: 10px;
 }
 .row2 .menu2 li:hover a{
   color: rgb(242, 89, 136);
 }
-
+.admin .menu2{
+  top:36px;
+}
 .admin .menu2 li{
   text-align: left !important;
 }
@@ -220,7 +231,7 @@ body.dark{
     
     /* submenu */
     .menu2{
-      top:56px;
+      top:98px;
       right: -166px;
       z-index: -1;
       background: rgb(37, 37, 61);
@@ -234,7 +245,10 @@ body.dark{
     }
 
     #gift .menu2{
-      right:-120px;
+      right:-193px;
+    }
+    .category .menu2{
+      right: -193px;
     }
   }
   @media only screen and (max-width: 700px) {
