--- a/public/css/post.css
+++ b/public/css/post.css
@@ -21,14 +21,14 @@ html, body { width: 100%; height: 100%; }
 .searchTerm:focus { color: rgb(242, 94, 132); }
 .searchButton { width: 66px; height: 50px; border: 1px solid rgb(255, 0, 0); background: linear-gradient(150deg, rgb(251, 191, 77) 35%, rgb(241, 78, 141) 100%); text-align: center; color: rgb(255, 255, 255); border-radius: 0px 5px 5px 0px; cursor: pointer; font-size: 20px; }
 .wrap { width: 56%; position: absolute; top: 10%; left: 50%; transform: translate(-50%, 50%); }
-.noidung { width: 37%; position: absolute; z-index: 1; top: 22%; border: 1px solid gray; height: 70%; overflow: auto; left: 22%; font-family: tahoma; }
-.noidung .b1 { width: 80%; margin-left: 20px; padding-bottom: 3%; border-bottom: 1px solid rgb(189, 189, 189); margin-top: 15px; }
+.noidung { width: 100%; z-index: 1; margin:20px 0 10px 20px; overflow: hidden;  font-family: tahoma; }
+.noidung .b1 { width: 50%;margin:0px auto;  padding-bottom: 3%; margin-top: 100px; }
 .noidung .b1 h4 { font-size: 32px; padding: 10px 0px; }
 .noidung .b1 span { color: rgb(54, 54, 54); padding-bottom: 10px; }
 .noidung .b1 img { margin-top: 13px; }
 
 
-.carousel {width: 250px;height: 400px;overflow: hidden;position: absolute;top: 22%;right: 20%;font-family: tahoma;border: 1px solid gray;cursor: pointer;}
+.carousel {width: 250px;height: 400px;overflow: hidden;position: absolute;top: 22%;right: 5%;font-family: tahoma;border: 1px solid gray;cursor: pointer;}
 .slide-container {width: 100%;height: 100%;position: relative;}
 .slide-container .slide img {width: 100%;}
 .slide-container .slide {width: 100%;height: 30%;padding: 5px 0px;transition: all 0.5s ease-in-out;overflow: hidden;cursor: pointer;position: relative;}
@@ -43,21 +43,17 @@ html, body { width: 100%; height: 100%; }
 
 
 
-footer{
-  margin-top:720px;
-}
+
 @media only screen and (min-width: 1920px) {
   * { margin: 0px; padding: 0px; }
   
   h4 { font-size: 4rem; }
   
 }
-@media only screen and (max-width: 1920px) and (min-width: 1824px) {
-  * { margin: 0px; padding: 0px; }
-}
+
 @media only screen and (max-width: 1080px) {
   * { margin: 0px; padding: 0px; }
-  .noidung { width: 68%; left: 50%; transform: translateX(-50%); }
+  /* .noidung { margin-left:20px; transform: translateX(-50%); } */
   .bg img { width: auto; height: 100%; }
   .wrap { top: 7%; }
   .carousel{display: none;}
