--- a/public/css/info.css
+++ b/public/css/info.css
@@ -29,7 +29,7 @@
   line-height: 22px;
   word-spacing: 2px;
   font-size: 16px;
-  font-family:var(--FontPrimary),sans-serif;
+  font-family:sans-serif;
 }
 .bg{
   width: 100%;
