--- a/public/css/post.css
+++ b/public/css/post.css
@@ -11,7 +11,7 @@ html, body { width: 100%; height: 100%; }
 @font-face { font-family: fontvn; src: url("/font/UVF_SlimTony.ttf"); }
 ::-webkit-scrollbar { width: 12px; height: 12px; }
 ::-webkit-scrollbar-track { width: 2px; }
-::-webkit-scrollbar-thumb { background: linear-gradient(150deg, rgb(251, 191, 77) 35%, rgb(241, 78, 141) 100%); }
+::-webkit-scrollbar-thumb { background: linear-gradient(150deg, rgb(251, 191, 77) 35%, rgb(241, 78, 141) 100%); border:4px solid transparent; border-radius: 8px;}
 ::-webkit-scrollbar-thumb:hover { background: rgb(241, 75, 143); }
 
 .search { width: 100%; position: relative; display: flex; }
@@ -21,14 +21,14 @@ html, body { width: 100%; height: 100%; }
 .searchTerm:focus { color: rgb(242, 94, 132); }
 .searchButton { width: 66px; height: 50px; border: 1px solid rgb(255, 0, 0); background: linear-gradient(150deg, rgb(251, 191, 77) 35%, rgb(241, 78, 141) 100%); text-align: center; color: rgb(255, 255, 255); border-radius: 0px 5px 5px 0px; cursor: pointer; font-size: 20px; }
 .wrap { width: 56%; position: absolute; top: 10%; left: 50%; transform: translate(-50%, 50%); }
-.noidung { width: 37%; position: absolute; z-index: 1; top: 22%; border: 1px solid gray; height: 70%; overflow: auto; left: 22%; font-family: tahoma; }
-.noidung .b1 { width: 80%; margin-left: 20px; padding-bottom: 3%; border-bottom: 1px solid rgb(189, 189, 189); margin-top: 15px; }
+.noidung { width: 50%;margin:0px auto;  z-index: 1; border: 1px solid gray; font-family: tahoma; margin-top:100px; }
+.noidung .b1 { max-width: 100%; margin-left: 20px; padding-bottom: 3%; border-bottom: 1px solid rgb(189, 189, 189); margin-top: 15px; }
 .noidung .b1 h4 { font-size: 32px; padding: 10px 0px; }
 .noidung .b1 span { color: rgb(54, 54, 54); padding-bottom: 10px; }
 .noidung .b1 img { margin-top: 13px; }
 
 
-.carousel {width: 250px;height: 400px;overflow: hidden;position: absolute;top: 22%;right: 20%;font-family: tahoma;border: 1px solid gray;cursor: pointer;}
+.carousel {width: 250px;height: 400px;overflow: hidden;position: absolute;top: 22%;right: 5%;font-family: tahoma;border: 1px solid gray;cursor: pointer;}
 .slide-container {width: 100%;height: 100%;position: relative;}
 .slide-container .slide img {width: 100%;}
 .slide-container .slide {width: 100%;height: 30%;padding: 5px 0px;transition: all 0.5s ease-in-out;overflow: hidden;cursor: pointer;position: relative;}
@@ -43,9 +43,6 @@ html, body { width: 100%; height: 100%; }
 
 
 
-footer{
-  margin-top:720px;
-}
 @media only screen and (min-width: 1920px) {
   * { margin: 0px; padding: 0px; }
   
