--- a/public/css/post.css
+++ b/public/css/post.css
@@ -21,14 +21,79 @@ html, body { width: 100%; height: 100%; }
 .searchTerm:focus { color: rgb(242, 94, 132); }
 .searchButton { width: 66px; height: 50px; border: 1px solid rgb(255, 0, 0); background: linear-gradient(150deg, rgb(251, 191, 77) 35%, rgb(241, 78, 141) 100%); text-align: center; color: rgb(255, 255, 255); border-radius: 0px 5px 5px 0px; cursor: pointer; font-size: 20px; }
 .wrap { width: 56%; position: absolute; top: 10%; left: 50%; transform: translate(-50%, 50%); }
-.noidung { width: 50%;margin:0px auto;  z-index: 1; border: 1px solid gray; font-family: tahoma; margin-top:100px; }
+.noidung { width: 50%;margin:0px auto;  z-index: 1; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin-top:100px; }
 .noidung .b1 { max-width: 100%; margin-left: 20px; padding-bottom: 3%; border-bottom: 1px solid rgb(189, 189, 189); margin-top: 15px; }
 .noidung .b1 h4 { font-size: 32px; padding: 10px 0px; }
 .noidung .b1 span { color: rgb(54, 54, 54); padding-bottom: 10px; }
 .noidung .b1 img { margin-top: 13px; }
+.flex{
+  display: flex;
+  align-items: flex-start;
+}
+.noidung .b1 .button{
+
+  height: 40px;
+  border:1px solid transparent;
+  border-radius: 8px;
+
+  margin-right: 10px;
+  transition: color 100ms;
+  touch-action: manipulation;
+}
+.noidung .b1 .button:hover {
+  background-color: #F082AC;
+}
+.noidung .b1 a{
+  margin:0px auto;
+  display: block;
+  width: 100%;
+  height: 50px;
+  padding:0px auto;
+ 
+  text-align: center;
+}
+.noidung .b1 a span{
+  margin:0px auto;
+  font-size: 14px;
+  line-height: 14px;
+ 
+}
 
 
-.carousel {width: 250px;height: 400px;overflow: hidden;position: absolute;top: 22%;right: 5%;font-family: tahoma;border: 1px solid gray;cursor: pointer;}
+/* CSS */
+.button {
+  background-color: #EA4C89;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-1:hover,
+.button-1:focus {
+  background-color: #F082AC;
+}
+
+.carousel {width: 250px;height: 400px;overflow: hidden;position: absolute;top: 22%;right: 10px;font-family: tahoma;border: 1px solid gray;cursor: pointer;}
 .slide-container {width: 100%;height: 100%;position: relative;}
 .slide-container .slide img {width: 100%;}
 .slide-container .slide {width: 100%;height: 30%;padding: 5px 0px;transition: all 0.5s ease-in-out;overflow: hidden;cursor: pointer;position: relative;}
