--- a/public/css/management.css
+++ b/public/css/management.css
@@ -2,10 +2,15 @@
 @import url(../CSS/footer.css);
 @import url(../CSS/menu.css);
 
+.user__image{
+  width: 184px;
+  height: 124px;
+}
 
-img{
-  max-width: 256px;
-  max-height: 256px;
+.user__image img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 li.darkLight-searchBox{
   visibility: hidden;
