--- a/public/css/search.css
+++ b/public/css/search.css
@@ -21,11 +21,13 @@ html, body { width: 100%; height: 100%; }
 .articles a {text-decoration: none; color: black;}
 .articles .art img {width: 256px;height: 70%; transition: 1s ease-in-out;}
 .art {margin: 0px 15px;margin-bottom: 20px;height: 200px;cursor: pointer;border: 1px solid black;border-radius: 9px;overflow: hidden;}
-.art .content {width: 210px;font-size: 11px; margin-top: 5px;}
+.art .content {width: 250px;font-size: 11px; margin-top: 5px;}
 .catelogy li:hover a{color:rgb(241, 75, 143)}
 .articles .art:hover img {transform: scale(1.1);}
 .articles .art:hover .content {font-weight: 500;}
-
+.art .content div + div,.art .content div + div{
+    visibility: hidden;
+}
 .popuptk{
     width: 100%;
     height: 100%;
