--- a/public/css/register.css
+++ b/public/css/register.css
@@ -18,8 +18,8 @@ body{
   margin-top:20px;
   margin-bottom: 20px;
   flex-direction: column;
-  max-width: 300px;
-  max-height: 600px;
+  max-width: 350px;
+  max-height: 800px;
   background-color: #ffffff;
   padding:30px 30px 20px 30px;
 }
@@ -37,10 +37,13 @@ body{
   display: flex;
   flex-direction: column;
 }
-.form .form__input .form__group{
+.form .form__input .form__group, .form .form__input .form__group select{
   margin-bottom: 19px;
   width: 100%;
   position: relative;
+}
+.form .form__input .form__group select{
+  margin-bottom: 0px;
 }
 .form__group label{
   font-size: 20px;
@@ -56,7 +59,7 @@ body{
   top:55px;
   left:10px;
 }
-.form .form__input input{
+.form .form__input input, .form .form__input .form__group select{
   width: 100%;
   height: 60px;
   background-color: #dfdedc;
