--- a/public/css/createPost.css
+++ b/public/css/createPost.css
@@ -36,9 +36,10 @@
 }
 
 #img{
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  max-height: 200px;
   object-fit: cover;
+  border-radius: 10px;
 }
 
 #image-post input[type="file"]{
