--- a/public/css/posts.css
+++ b/public/css/posts.css
@@ -172,7 +172,7 @@
   margin-left: 10%;
   text-decoration: underline;
 }
-.related-content .el{
+/* .related-content .el{
   width: 300px;
   transition: transform 0.5ms ease-in;
 }
@@ -187,14 +187,12 @@
 }
 .related-content a img{
   max-width: 256px;
-}
+} */
 
 /* button section */
 .button-section{
   display: flex;
-  width: 50%;
-  justify-content: center;
-  align-items: center;
+  margin-left: 10%;
 }
 .button{
   margin-right: 20px;
