--- a/public/css/posts.css
+++ b/public/css/posts.css
@@ -218,19 +218,50 @@
 /* end of button section */
 
 /* comment section */
-.comment-section{
+.comment-block,.comment-section{
   display: flex;
-  width: 50%;
-  justify-content: center;
-  align-items: center;
+  width: 80%;
+  margin-left:10%;
   margin-top:10px;
   margin-bottom: 10px;
 }
-textarea.cmt1{
-  max-width: 50%;
-  max-height: 100%;
- 
-  
+form.comment-section{
+  flex-direction: column;
+}
+.comment-block,textarea.cmt1{
+  width: 60%;
+  height: 100px;
+  border-radius:4px;
+  box-shadow: 10px 10px 5px #aaaaaa;
+  margin-right: 10px;
+  margin-bottom: 20px;
+}
+.comment-block{
+  margin-left: 0;
+}
+textarea.cmt1::-webkit-resizer{
+  display: none;
+}
+input#sent{
+  background-color: green;
+  color:white;
+}
+input#discard{
+  background-color: red;
+  color:white
+}
+input#sent:hover,input#discard:hover{
+  opacity: 0.5;
+}
+.comment-block .img{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.comment-block .img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 
