--- a/public/css/search.css
+++ b/public/css/search.css
@@ -10,14 +10,14 @@ html, body { width: 100%; height: 100%; }
 ::-webkit-scrollbar-thumb:hover { background: rgb(241, 75, 143); }
 
 .body { position: relative; z-index: 2; width: 100%; height: 100%; }
-.box {width: 100%;margin: auto;height:100%;font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif}
+.box {width: 100%;margin: auto;;height:80%;font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif}
 .wrapper {width: 80%;position: absolute;top: 10%;left: 50%;transform: translate(-50%, 50%); border: 1px solid black; border-radius: 10px;}
 .catelogy { width: 100%; position: relative; display: flex; justify-content: space-around;  padding: 12px; height: 50px; outline: none; cursor: pointer; text-align: center; opacity: 1;}
 .box ul li {list-style: none;} 
 .box ul li a {text-decoration: none; color: black;}
 .wrapper .catelogy li { border-right: 1px solid gray; height: 100%; padding-right: 10px;}
 .wrapper .catelogy li:last-child { border: none;}
-.articles {padding-top:20px;width: 80%;position: absolute;top: 22.3%;border: 1px solid black;height: 80%;overflow: auto;display: flex;left: 10%;flex-wrap: wrap;justify-content: center;align-items: center;border-radius: 10px;}
+.articles {padding-top:20px;width: 80%;position: absolute;top: 30%;border: 1px solid black;height: 80%;overflow: auto;display: flex;left: 10%;flex-wrap: wrap;justify-content: center;align-items: center;border-radius: 10px;}
 .articles a {text-decoration: none; color: black;}
 .articles .art img {width: 256px;height: 70%; transition: 1s ease-in-out;}
 .art {margin: 0px 15px;margin-bottom: 20px;height: 220px;cursor: pointer;border: 1px solid black;border-radius: 9px;overflow: hidden;}
@@ -31,8 +31,9 @@ html, body { width: 100%; height: 100%; }
 /* //search */
 .body1 {
     margin-top:50px;
-    width: 100%; 
-    height:100px;
+    width: 100%;
+
+    /* height:100px; */
 
 }
 .body1 form{
@@ -56,6 +57,8 @@ html, body { width: 100%; height: 100%; }
     width: 100%;
     position: relative;
     display: flex;
+    border:1px solid grey;
+    border-radius: 5px;
   }
 .danhmuc{
     max-height: 40px;
@@ -68,9 +71,12 @@ html, body { width: 100%; height: 100%; }
     cursor: pointer;
     text-align: center;
     opacity: 100%;
+    border-right:1px solid grey;
     /* border-right: 1px solid gray; */
     border-radius: 5px 0px 0px 5px;
-    background-color: rgb(215, 201, 201);
+    /* background-color: rgb(215, 201, 201); */
+
+    border-right: none;
 }
 #type.danhmuc{
   border-right:transparent;
@@ -88,7 +94,8 @@ html, body { width: 100%; height: 100%; }
     height: 100%;
     outline: none;
     color: #f25e84;
-    background-color: rgb(215, 201, 201);
+
+    /* background-color: rgb(215, 201, 201); */
   }
   
   .searchTerm:focus{
@@ -108,5 +115,7 @@ html, body { width: 100%; height: 100%; }
     font-size: 20px;
   }
   
-
+footer{
+  margin-top:50px;
+}
   
