--- a/public/css/search.css
+++ b/public/css/search.css
@@ -8,16 +8,35 @@ html, body { width: 100%; height: 100%; }
 ::-webkit-scrollbar-track { width: 2px; }
 ::-webkit-scrollbar-thumb { background: linear-gradient(150deg, rgb(251, 191, 77) 35%, rgb(241, 78, 141) 100%); }
 ::-webkit-scrollbar-thumb:hover { background: rgb(241, 75, 143); }
+/* 
+.body { position: relative; z-index: 2; width: 100%; height: 100%; } */
+.body{
+  width:100%;
+  margin-top: 50px;
+}
+.box{
+  width: 100%;
+  margin:0px auto;
 
-.body { position: relative; z-index: 2; width: 100%; height: 100%; }
-.box {width: 100%;margin: auto;;height:80%;font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif}
+}
+/* .box {width: 100%;margin: auto;;height:80%;font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif} */
 .wrapper {width: 80%;position: absolute;top: 10%;left: 50%;transform: translate(-50%, 50%); border: 1px solid black; border-radius: 10px;}
 .catelogy { width: 100%; position: relative; display: flex; justify-content: space-around;  padding: 12px; height: 50px; outline: none; cursor: pointer; text-align: center; opacity: 1;}
 .box ul li {list-style: none;} 
 .box ul li a {text-decoration: none; color: black;}
 .wrapper .catelogy li { border-right: 1px solid gray; height: 100%; padding-right: 10px;}
 .wrapper .catelogy li:last-child { border: none;}
-.articles {padding-top:20px;width: 80%;position: absolute;top: 30%;border: 1px solid black;height: 80%;overflow: auto;display: flex;left: 10%;flex-wrap: wrap;justify-content: center;align-items: center;border-radius: 10px;}
+.articles{
+  width: 80%;
+  margin:0px auto;
+  margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+/* .articles {padding-top:20px;width: 80%;position: absolute;top: 30%;border: 1px solid black;height: 80%;overflow: auto;display: flex;left: 10%;flex-wrap: wrap;justify-content: center;align-items: center;border-radius: 10px;} */
 .articles a {text-decoration: none; color: black;}
 .articles .art img {width: 256px;height: 70%; transition: 1s ease-in-out;}
 .art {margin: 0px 15px;margin-bottom: 20px;height: 220px;cursor: pointer;border: 1px solid black;border-radius: 9px;overflow: hidden;}
