--- a/public/css/management.css
+++ b/public/css/management.css
@@ -209,3 +209,18 @@ li.darkLight-searchBox{
     line-height: 14px;
   }
 }
+
+/* pagination */
+
+.pagination{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pagination .page-item{
+  width: 25px;
+  height: 25px;
+  border:1px solid grey;  
+  margin:0 10px;
+}
+/* end of pagination */
