--- a/public/css/home.css
+++ b/public/css/home.css
@@ -38,7 +38,7 @@
     cursor: pointer;
     text-align: center;
     opacity: 100%;
-    border-right: 1px solid gray;
+    border-right: 1px solid transparent;
     border-radius: 5px 0px 0px 5px;
     background-color: rgb(215, 201, 201);
 }
@@ -55,7 +55,7 @@
     width: 85%;
     border: none;
     padding: 12px;
-    height: 100%;
+    height: 40px;
     outline: none;
     color: #f25e84;
     background-color: rgb(215, 201, 201);
