--- a/public/css/search.css
+++ b/public/css/search.css
@@ -99,10 +99,12 @@ html, body { width: 100%; height: 100%; }
 }
 #type.danhmuc{
   border-right:transparent;
+  background-color: rgb(225,230,226);
 }
 #browsers.danhmuc{
   border-left:transparent;
-  border-radius: 0px;;
+  border-radius: 0px;
+  background-color: rgb(225,230,226);
 }
 
   .danhmuc::placeholder{text-align: center;color:black}
@@ -113,8 +115,7 @@ html, body { width: 100%; height: 100%; }
     height: 100%;
     outline: none;
     color: #f25e84;
-
-    /* background-color: rgb(215, 201, 201); */
+    background-color: rgb(225,230,226);
   }
   
   .searchTerm:focus{
@@ -152,5 +153,9 @@ footer{
   height: 25px;
   border:1px solid grey;  
   margin:0 10px;
+}
+.pagination .page-item a{
+  width: 100%;
+  height: 100%;
 }
 /* end of pagination */
