--- a/public/css/posts.css
+++ b/public/css/posts.css
@@ -313,6 +313,33 @@ input#sent:hover,input#discard:hover{
   max-width: 80% !important;
 }
 /* hết phần nút thêm ảnh trang chỉnh sửa bài dăng */
+/* rating */
+.rating-css div {
+  color: #ffe400;
+  font-size: 30px;
+  font-family: sans-serif;
+  font-weight: 800;
+  text-align: center;
+  text-transform: uppercase;
+  padding: 20px 0;
+}
+.rating-css input {
+  display: none;
+}
+.rating-css input + label {
+  font-size: 60px;
+  text-shadow: 1px 1px 0 #8f8420;
+  cursor: pointer;
+}
+.rating-css input:checked + label ~ label {
+  color: #b4afaf;
+}
+.rating-css label:active {
+  transform: scale(0.8);
+  transition: 0.3s ease;
+}
+
+/* End of Star Rating */
 
 
 @media (min-width:800px){
