--- a/public/css/search.css
+++ b/public/css/search.css
@@ -29,7 +29,7 @@ html, body { width: 100%; height: 100%; }
 .articles{
   width: 80%;
   margin:0px auto;
-  margin-top: 50px;
+  margin-top: 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -151,7 +151,7 @@ footer{
 .pagination .page-item{
   color:black;
   padding: 8px 16px;
-  transition: background-color .3s;
+  transition: background-color 0.3s linear;
   border:1px solid grey;  
   margin: 0 4px;
 }
@@ -162,4 +162,9 @@ footer{
   border: 1px solid #4CAF50;
 }
 
+.box h3{
+  width: 60%;
+  margin: 0px auto;
+
+}
 /* end of pagination */
