--- a/public/css/home.css
+++ b/public/css/home.css
@@ -10,7 +10,7 @@
 /* //search */
 .body {position: relative;z-index: 2;width: 100%;height: 100%; }
 .body .logo_title{
-    margin: auto;
+    margin: 10px auto;
     width: 60%;
     position: absolute;
     top: 250px;
