--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -147,28 +147,14 @@ body.dark{
 /* end of search button */
 /* submenu */
 .menu2{
-  width:193px;
-  position:absolute;
+  width: inherit;
+
   display: none;
   transition:1s ease-in-out;
 
   background: rgb(37, 37, 61);
-  z-index: -1;
 }
 
-/* .menu li:nth-child(3) .menu2{
-  right:401px;
-}
-.menu li:nth-child(4) .menu2{
-  right:208px;
-} */
-
-/* .admin .menu2{
-  right:-20px;
-} */
-/* .admin .menu2:before{
-  left:145px;
-} */
 
 .row2 .menu li#map a img,.row2 .menu li#shop a img{
   filter: invert(1);
@@ -178,22 +164,7 @@ body.dark{
   display: block;
 }
 
-/* .menu2:before{
-  content: '';
-  position: absolute;
-  width:0px;
-  height:0px;
-  border-left:10px solid transparent;
-  border-right:10px solid transparent;
-  border-bottom: 10px solid black;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid #000;
-  z-index: 3;
-  opacity: 1;
-  top:-5px;
-  left:10px;
-} */
+
 
 .row2 .menu2 li{
   display: block;
@@ -230,7 +201,7 @@ body.dark{
   border-radius: 50%;
   background-color: antiquewhite;
 }
-@media (min-width:1200px) {
+@media (min-width:1250px) {
   ul.row2 .menu{
     height: 100%;
   }
@@ -241,7 +212,7 @@ body.dark{
     width: 100%;
   }
 }
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1250px) {
     
     .nav{position: fixed;}
     .nav .row2 .menu { display: block; background: rgb(37, 37, 61); width: 200px; }
