--- a/public/css/posts.css
+++ b/public/css/posts.css
@@ -9,12 +9,15 @@
 .panel{
 
   display: flex;
-  margin:0 10%;
+  margin:0 auto;
+  margin-left:10%;
+  margin-right:0;
   margin-top: 100px;
+  justify-content: space-around;
 }
 
 #posts{
-  width:50%; 
+  width:80%; 
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -140,26 +143,42 @@
   object-fit: cover;
 }
 
-/* //start slide */
-.carousel {visibility: hidden;}
-.slide-container {width: 100%;height: 100%;position: relative;}
-.slide-container .slide img {width: 100%;}
-.slide-container .slide {width: 100%;height: 30%;padding: 5px 0px;transition: all 0.5s ease-in-out;overflow: hidden;cursor: pointer;position: relative;}
-.slide-container .slide span{background: #0000007e;width: 100%;height: 100%;position: absolute;left: 0;transition: 1s;}
-.slide-container .slide .text{width: 40%;top: 50%;left: 50%;color: white;position: absolute;transition: 0.5s ease-in-out;transform: translate(-50%, -50%);}
-.slide-container .slide:hover span {opacity: 0;}
-.slide-container .slide:hover .text{margin-top: -100%; opacity: 0; transform-origin: center!important;}
-.btn-prev, .btn-next{font-size: 2rem;top: -4%;padding: 5px;position: absolute;left: 43%;color: white;cursor: pointer;transition: all 0.5s ease-in-out;z-index: 10;}
-.btn-next{bottom: -4%;top: auto;}
-.btn-prev:hover,.btn-next:hover{background-color:rgba(0, 0, 0, 0.753);}
-.slide:first-child {margin-top: 0px;}
-/* //end slide */
-
-
-
-.related-post{
-  margin-top: 30px;
+/* slider dọc */
+.panel .related-post{
+  width: 30%;
+  margin-left: 40px;
+  padding-top: 300px;
+  display: flex;
+  flex-direction: column;
 }
+.panel .related-post .image-slider-2{
+  width: 100%;
+
+}
+.panel .related-post .title h3{
+  font-size: 26px;
+}
+.panel .related-post .slick-prev{
+  top:0;
+  left: 43%;
+}
+.panel .related-post .slick-next{
+  left: 43%;
+  top:100%;
+}
+.panel .related-post .image-item .image,.panel .related-post .image-item .image-title{
+  margin: 0px auto;
+  width: 80%;
+  margin-bottom: 10px;
+}
+
+@media (max-width:600px) {
+  .panel{
+    flex-direction: column;
+  }
+  
+}
+
 
 .related-content{
   width: 100%;
