--- a/public/css/search.css
+++ b/public/css/search.css
@@ -17,6 +17,7 @@ html, body { width: 100%; height: 100%; }
 .box{
   width: 100%;
   margin:0px auto;
+  margin-top: 20px;
 
 }
 /* .box {width: 100%;margin: auto;;height:80%;font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif} */
